--- a/src/main/resources/static/jugadores.html
+++ b/src/main/resources/static/jugadores.html
@@ -8,26 +8,41 @@
   <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg bg-light border-bottom">
   <div class="container">
     <a class="navbar-brand fw-bold" href="/dashboard.html">🏁 Regata Online</a>
   </div>
 </nav>
 
 <div class="container my-4">
-  <div class="card">
-    <div class="card-header d-flex justify-content-between">
-      <span>Gestión de Jugadores</span>
-      <a class="btn btn-secondary" href="/dashboard.html">Dashboard</a>
+  <div class="card shadow-sm">
+    <div class="card-header d-flex justify-content-between align-items-center">
+      <span class="fw-semibold">Gestión de Jugadores</span>
+      <a class="btn btn-secondary btn-sm" href="/dashboard.html">Dashboard</a>
     </div>
+
     <div class="card-body">
-      <div class="d-flex justify-content-between mb-2">
-        <input id="buscar" class="form-control w-50" placeholder="Buscar jugador...">
-        <button class="btn btn-success" onclick="nuevo()">+ Nuevo</button>
-      </div>
+      <!-- Formulario para crear jugadores -->
+      <form id="frmNuevo" class="row g-2 align-items-end mb-3">
+        <div class="col-md-4">
+          <label class="form-label">Nombre</label>
+          <input id="nombre" class="form-control" required placeholder="Nombre del jugador">
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Email</label>
+          <input id="email" type="email" class="form-control" placeholder="email@dominio.com">
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-success w-100" type="submit">+ Crear jugador</button>
+        </div>
+      </form>
+
+      <!-- Tabla de jugadores -->
       <div class="table-responsive">
-        <table class="table">
-          <thead><tr><th>ID</th><th>Nombre</th><th>Email</th><th>Acciones</th></tr></thead>
+        <table class="table table-hover align-middle">
+          <thead class="table-light">
+            <tr><th>ID</th><th>Nombre</th><th>Email</th><th>Acciones</th></tr>
+          </thead>
           <tbody id="tbl"></tbody>
         </table>
       </div>
@@ -36,45 +51,94 @@
 </div>
 
 <script>
-const API="/api";
-async function j(u,opt){const r=await fetch(u,opt);return r.json();}
-let DATA=[];
-async function cargar(){
-  DATA = await j(`${API}/jugadores`);
-  render();
+const API = "/api/jugadores";
+
+// 🔹 Utilidad para peticiones
+async function fetchJson(url, opt) {
+  const res = await fetch(url, opt);
+  if (!res.ok) throw new Error(`HTTP ${res.status}`);
+  return res.status !== 204 ? res.json() : null;
 }
-function render(){
-  const q=document.getElementById('buscar').value?.toLowerCase()||'';
-  const tb=document.getElementById('tbl');
-  tb.innerHTML = DATA.filter(x=>x.nombre?.toLowerCase().includes(q)||x.email?.toLowerCase().includes(q))
-    .map(u=>`
-      <tr>
-        <td>${u.id}</td>
-        <td>${u.nombre}</td>
-        <td>${u.email||''}</td>
-        <td>
-          <button class="btn btn-sm btn-warning" onclick="edit(${u.id})">Editar</button>
-          <button class="btn btn-sm btn-danger" onclick="delU(${u.id})">Eliminar</button>
-        </td>
-      </tr>
-    `).join('');
+
+// 🔹 Cargar lista de jugadores
+async function cargar() {
+  const data = await fetchJson(API);
+  const tb = document.getElementById('tbl');
+  tb.innerHTML = data.map(j => `
+    <tr>
+      <td>${j.id}</td>
+      <td>${j.nombre}</td>
+      <td>${j.email ?? ""}</td>
+      <td>
+        <button class="btn btn-sm btn-info" onclick="ver(${j.id})">Ver</button>
+        <button class="btn btn-sm btn-warning" onclick="editar(${j.id})">Editar</button>
+        <button class="btn btn-sm btn-danger" onclick="eliminar(${j.id})">Eliminar</button>
+      </td>
+    </tr>
+  `).join('');
 }
-document.getElementById('buscar').oninput=render;
-function nuevo(){
-  const nombre=prompt('Nombre'); if(!nombre) return;
-  const email=prompt('Email'); 
-  fetch(`${API}/jugadores`,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({nombre,email})}).then(()=>cargar());
+
+// 🔹 Crear jugador
+async function crear(e) {
+  e.preventDefault();
+  const nombre = document.getElementById('nombre').value.trim();
+  const email = document.getElementById('email').value.trim();
+
+  if (!nombre) { alert("El nombre es obligatorio."); return; }
+
+  await fetchJson(API, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ nombre, email: email || null })
+  });
+
+  e.target.reset();
+  cargar();
 }
-function edit(id){
-  const nombre=prompt('Nuevo nombre'); if(!nombre) return;
-  const email=prompt('Nuevo email');
-  fetch(`${API}/jugadores/${id}`,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({id,nombre,email})}).then(()=>cargar());
+
+// 🔹 Ver jugador (detalle rápido en alerta)
+async function ver(id) {
+  try {
+    const j = await fetchJson(`${API}/${id}`);
+    alert(`Jugador #${j.id}\n\nNombre: ${j.nombre}\nEmail: ${j.email ?? "(sin email)"}`);
+  } catch (err) {
+    alert("Error al obtener jugador: " + err.message);
+  }
 }
-function delU(id){
-  if(!confirm('¿Eliminar?')) return;
-  fetch(`${API}/jugadores/${id}`,{method:'DELETE'}).then(()=>cargar());
+
+// 🔹 Editar jugador
+async function editar(id) {
+  try {
+    const j = await fetchJson(`${API}/${id}`);
+    const nombre = prompt("Nuevo nombre:", j.nombre);
+    if (nombre === null || !nombre.trim()) return;
+    const email = prompt("Nuevo email:", j.email ?? "");
+    await fetchJson(`${API}/${id}`, {
+      method: "PUT",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ id, nombre: nombre.trim(), email: email?.trim() || null })
+    });
+    alert("Jugador actualizado correctamente.");
+    cargar();
+  } catch (err) {
+    alert("Error al editar: " + err.message);
+  }
 }
-cargar();
+
+// 🔹 Eliminar jugador
+async function eliminar(id) {
+  if (!confirm("¿Eliminar jugador?")) return;
+  await fetchJson(`${API}/${id}`, { method: "DELETE" });
+  alert("Jugador eliminado.");
+  cargar();
+}
+
+// 🔹 Inicializar página
+document.getElementById('frmNuevo').addEventListener('submit', crear);
+window.addEventListener("DOMContentLoaded", () => {
+  if (location.hash) location.hash = "";
+  cargar();
+});
 </script>
 </body>
 </html>
