--- a/src/main/resources/static/mapas.html
+++ b/src/main/resources/static/mapas.html
@@ -6,9 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css"/>
+  <style>
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(var(--w), 1fr);
+      gap: 2px;
+    }
+    .cell {
+      width: 28px;
+      height: 28px;
+      cursor: pointer;
+      border-radius: 3px;
+    }
+    .cell-agua { background-color: #5dade2; }
+    .cell-pared { background-color: #2c3e50; }
+    .cell-partida { background-color: #27ae60; }
+    .cell-meta { background-color: #e74c3c; }
+  </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg bg-light border-bottom">
   <div class="container">
     <a class="navbar-brand fw-bold" href="/dashboard.html">🏁 Regata Online</a>
   </div>
@@ -16,18 +33,24 @@
 
 <div class="container my-4">
   <div class="row g-4">
+    <!-- Editor principal -->
     <div class="col-lg-6">
-      <div class="card h-100">
-        <div class="card-header d-flex justify-content-between"><span>Editor de Mapas</span><a class="btn btn-secondary" href="/dashboard.html">Dashboard</a></div>
+      <div class="card h-100 shadow-sm">
+        <div class="card-header d-flex justify-content-between">
+          <span>Editor de Mapas</span>
+          <a class="btn btn-secondary btn-sm" href="/dashboard.html">Dashboard</a>
+        </div>
         <div class="card-body">
           <div id="grid" class="grid border p-2 rounded" style="--w:12;"></div>
         </div>
       </div>
     </div>
+
+    <!-- Herramientas -->
     <div class="col-lg-3">
-      <div class="card h-100">
-        <div class="card-header">Herramientas</div>
-        <div class="card-body tools">
+      <div class="card h-100 shadow-sm">
+        <div class="card-header fw-semibold">Herramientas</div>
+        <div class="card-body d-flex flex-column gap-2">
           <button class="btn btn-primary" onclick="setTool('AGUA')">💧 Agua</button>
           <button class="btn btn-dark" onclick="setTool('PARED')">🧱 Pared</button>
           <button class="btn btn-success" onclick="setTool('PARTIDA')">🟢 Partida</button>
@@ -37,9 +60,11 @@
         </div>
       </div>
     </div>
+
+    <!-- Dimensiones -->
     <div class="col-lg-3">
-      <div class="card h-100">
-        <div class="card-header">Dimensiones</div>
+      <div class="card h-100 shadow-sm">
+        <div class="card-header fw-semibold">Dimensiones</div>
         <div class="card-body">
           <div class="mb-2">
             <label class="form-label">Ancho</label>
@@ -49,7 +74,7 @@
             <label class="form-label">Alto</label>
             <input id="al" type="number" class="form-control" value="10" min="5" max="30">
           </div>
-          <button class="btn btn-secondary" onclick="resize()">Aplicar</button>
+          <button class="btn btn-secondary w-100" onclick="resize()">Aplicar</button>
         </div>
       </div>
     </div>
@@ -58,11 +83,13 @@
 
 <script>
 const API="/api";
-const APIv1="/api/v1";
 let mapa = { id:null, nombre:'Mapa editor', ancho:12, alto:10, celdas:[] };
 let tool='AGUA';
 
+// Cambiar herramienta actual
 function setTool(t){ tool=t; }
+
+// Cambiar dimensiones del mapa
 function resize(){
   mapa.ancho = +document.getElementById('an').value;
   mapa.alto  = +document.getElementById('al').value;
@@ -70,6 +97,7 @@ function resize(){
   draw();
 }
 
+// Dibuja el grid visual del mapa
 function draw(){
   const cont = document.getElementById('grid');
   cont.style.setProperty('--w', mapa.ancho);
@@ -77,29 +105,46 @@ function draw(){
   const tipos = new Map(mapa.celdas.map(c => [`${c.x},${c.y}`, c.tipo]));
   for(let y=0;y<mapa.alto;y++){
     for(let x=0;x<mapa.ancho;x++){
+      const tipoActual = tipos.get(`${x},${y}`) || 'AGUA';
       const d=document.createElement('div');
-      d.className='cell cell-'+(tipos.get(`${x},${y}`)||'pared').toLowerCase();
+      d.className='cell cell-'+tipoActual.toLowerCase();
+      d.title = tipoActual;
       d.onclick=()=>{
-        const k=`${x},${y}`;
-        if(tool==='AGUA' || tool==='PARED' || tool==='PARTIDA' || tool==='META'){
-          const i=mapa.celdas.findIndex(c=>c.x===x&&c.y===y);
-          if(i>=0) mapa.celdas.splice(i,1);
-          mapa.celdas.push({x,y,tipo:tool});
-          draw();
-        }
+        const i = mapa.celdas.findIndex(c=>c.x===x&&c.y===y);
+        if(i>=0) mapa.celdas.splice(i,1);
+        mapa.celdas.push({x,y,tipo:tool});
+        draw();
       };
       cont.appendChild(d);
     }
   }
 }
+
+// Guarda el mapa completo (mapa + celdas)
 async function guardar(){
-  // Crea/actualiza el mapa base (nombre/ancho/alto)
-  let base = await fetch(`${API}/mapas`,{
-    method:'POST', headers:{'Content-Type':'application/json'},
-    body: JSON.stringify({ nombre: mapa.nombre, ancho: mapa.ancho, alto: mapa.alto })
-  }).then(r=>r.json());
-  alert('Mapa guardado con ID: '+base.id);
+  const body = {
+    nombre: mapa.nombre,
+    ancho: mapa.ancho,
+    alto: mapa.alto,
+    celdas: mapa.celdas
+  };
+  const resp = await fetch(`${API}/mapas/completo`, {
+    method: 'POST',
+    headers: { 'Content-Type':'application/json' },
+    body: JSON.stringify(body)
+  });
+
+  if (!resp.ok) {
+    const txt = await resp.text();
+    alert('Error al guardar: ' + txt);
+    return;
+  }
+
+  const data = await resp.json();
+  mapa.id = data.id;
+  alert('Mapa guardado correctamente con ID: ' + mapa.id);
 }
+
 draw();
 </script>
 </body>
